--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
     compile 'androidx.preference:preference:1.1.0'
     implementation "androidx.viewpager2:viewpager2:1.0.0"
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
