0810 Bill's big change

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,15 @@
             android:name=".ChampionDetailActivity"
             android:parentActivityName=".MainActivity" />
         <activity
+            android:name=".TFTOpponentActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".LOLActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".TFTActivity"
+            android:parentActivityName=".MainActivity" />
+        <activity
             android:name=".SettingsActivity"
             android:parentActivityName=".MainActivity" />
         <activity
